--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h3>Mountains - Clouds</h3>
         </div>
     </section>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
